[Refactoring] Simplify code